--- a/08_RISPONSIVE/vezba4/index.html
+++ b/08_RISPONSIVE/vezba4/index.html
@@ -22,8 +22,13 @@
                 <li class="col-1">
                     <a href="#">Destinacije</a>
                 </li>
-                <li class="col-1">
+                <li class="dropdown col-1">
                     <a href="#">Informacije</a>
+                    <div>
+                        <a href="#">o nama</a>
+                        <a href="#">o vama</a>
+                        <a href="#">o njima</a>
+                    </div>
                 </li>
                 <li class="col-1">
                     <a href="#">Kontakt</a>
