--- a/08_RISPONSIVE/vezba3/index.html
+++ b/08_RISPONSIVE/vezba3/index.html
@@ -43,9 +43,9 @@
     <div class="row">
     
 
-            <img src="/08_RISPONSIVE/slike/slika1.jpg" alt="reka" class="col-4">
-        <img src="/08_RISPONSIVE/slike/slika2.jpg" alt="aurora" class="col-4">
-        <img src="/08_RISPONSIVE/slike/slika3.jpg" alt="planina" class="col-4">
+            <img src="../slike/slika1.jpg" alt="reka" class="col-4">
+        <img src="../slike/slika2.jpg" alt="aurora" class="col-4">
+        <img src="../slike/slika3.jpg" alt="planina" class="col-4">
         
 
 
