dodata 11_while_petlja

--- a/10_IF_Naredba_Granjanja/index.html
+++ b/10_IF_Naredba_Granjanja/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="script.js"></script> -->
     <!-- <script src="if_else.js"></script> -->
     <!-- <script src="if_elseif.js"></script> -->
-    <script src="if_ugnjezdeno.js"></script>
+    <!-- <script src="if_ugnjezdeno.js"></script> -->
+    <script src="if_logicki_operatori.js"></script>
 </body>
 </html>
