modifikovane for petlje

--- a/12_FOR_PETLJA/index.html
+++ b/12_FOR_PETLJA/index.html
@@ -10,9 +10,67 @@
       .obojeni {
         background-color: pink;
       }
+      .span1 {
+        display: inline-block;
+        border: 1px solid black;
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        padding: 4px;
+        margin: 1px 0;
+      }
+      .bela {
+        background-color: white;
+      }
+      .crna {
+        background-color: black;
+        color: white;
+      }
     </style>
   </head>
   <body>
+    <!-- <div>
+      <span class="span1 bela">1</span><span class="span1 crna">2</span
+      ><span class="span1 bela">3</span><span class="span1 crna">4</span
+      ><span class="span1 bela">5</span><span class="span1 crna">6</span
+      ><span class="span1 bela">7</span><span class="span1 crna">8</span><br />
+      <span class="span1 crna">9</span><span class="span1 bela">10</span
+      ><span class="span1 crna">11</span><span class="span1 bela">12</span
+      ><span class="span1 crna">13</span><span class="span1 bela">14</span
+      ><span class="span1 crna">15</span><span class="span1 bela">16</span
+      ><br />
+      <span class="span1 bela">17</span><span class="span1 crna">18</span
+      ><span class="span1 bela">19</span><span class="span1 crna">20</span
+      ><span class="span1 bela">21</span><span class="span1 crna">22</span
+      ><span class="span1 bela">23</span><span class="span1 crna">24</span
+      ><br />
+      <span class="span1 crna">25</span><span class="span1 bela">26</span
+      ><span class="span1 crna">27</span><span class="span1 bela">28</span
+      ><span class="span1 crna">29</span><span class="span1 bela">30</span
+      ><span class="span1 crna">31</span><span class="span1 bela">32</span
+      ><br />
+      <span class="span1 bela">33</span><span class="span1 crna">34</span
+      ><span class="span1 bela">35</span><span class="span1 crna">36</span
+      ><span class="span1 bela">37</span><span class="span1 crna">38</span
+      ><span class="span1 bela">39</span><span class="span1 crna">40</span
+      ><br />
+      <span class="span1 crna">41</span><span class="span1 bela">42</span
+      ><span class="span1 crna">43</span><span class="span1 bela">44</span
+      ><span class="span1 crna">45</span><span class="span1 bela">46</span
+      ><span class="span1 crna">47</span><span class="span1 bela">48</span
+      ><br />
+      <span class="span1 bela">49</span><span class="span1 crna">50</span
+      ><span class="span1 bela">51</span><span class="span1 crna">52</span
+      ><span class="span1 bela">53</span><span class="span1 crna">54</span
+      ><span class="span1 bela">55</span><span class="span1 crna">56</span
+      ><br />
+      <span class="span1 crna">57</span><span class="span1 bela">58</span
+      ><span class="span1 crna">59</span><span class="span1 bela">60</span
+      ><span class="span1 crna">61</span><span class="span1 bela">62</span
+      ><span class="span1 crna">63</span><span class="span1 bela">64</span
+      ><br />
+    </div> -->
+
     <script src="script.js"></script>
     <!-- <script src="zadaciVezba.js"></script> -->
   </body>
