dodati moduli nizovi dom i eventi

--- a/21_MODULI/index.html
+++ b/21_MODULI/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NIZOVI OBJEKATA</title>
+    <title>MODULI</title>
 </head>
 
 <body>
-    <!-- <script src="script.js"></script> -->
-    <script src="script1.js"></script>
-    <!-- <script src="zadatakDan.js"></script> -->
+    <!-- Modul je js file sa dodatnim svojstvima -->
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
