--- a/21_MODULI/Projekat_vezbanje/index.html
+++ b/21_MODULI/Projekat_vezbanje/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NIZOVI OBJEKATA</title>
+    <title>PROJEKAT VEZBANJE</title>
+    <style>
+        img {
+            width: 200px;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- <script src="script.js"></script> -->
-    <script src="script1.js"></script>
-    <!-- <script src="zadatakDan.js"></script> -->
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
