--- a/25_ASINHRONI_JS/index.html
+++ b/25_ASINHRONI_JS/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    div {
+        overflow: hidden;
+        flex-wrap: wrap;
+    }
+</style>
 
 <head>
     <meta charset="UTF-8" />
@@ -9,8 +15,27 @@
 </head>
 
 <body>
+    <!-- <div id="ispis">
+        <h1>Korisnici ciji website ima domen "".com"</h1>
+    </div>
 
-    
+    <div id="ispis1">
+        <h1>Korisnici čije ime sadrži reč „Clementin“</h1>
+    </div>
+    <div id="ispis2">
+        <h1>
+            Korisnici koji rade u kompaniji čije ime sadrži reč „Group“, ili reč „LLC“.
+        </h1>
+    </div>
+    <div id="ispis3">
+        <h1>
+            Korisnici koji žive na adresi čije su obe vrednosti geografske dužine i geografske širine negativni brojevi.
+        </h1>
+    </div>
+    <div id="ispis4">
+        <h1>Svi različiti gradovi u kojima rade korisnici.</h1>
+    </div> -->
+
     <script src="script.js"></script>
 </body>
 
