--- a/25_ASINHRONI_JS/index.html
+++ b/25_ASINHRONI_JS/index.html
@@ -3,7 +3,7 @@
 <style>
     div {
         overflow: hidden;
-        flex-wrap: wrap;
+        flex-direction: row;
     }
 </style>
 
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- <div id="ispis">
+    <div id="ispis">
         <h1>Korisnici ciji website ima domen "".com"</h1>
     </div>
 
@@ -34,7 +34,7 @@
     </div>
     <div id="ispis4">
         <h1>Svi različiti gradovi u kojima rade korisnici.</h1>
-    </div> -->
+    </div>
 
     <script src="script.js"></script>
 </body>
