--- a/25_ASINHRONI_JS/index.html
+++ b/25_ASINHRONI_JS/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div id="ispis">
+    <!-- <div id="ispis">
         <h1>Korisnici ciji website ima domen "".com"</h1>
     </div>
 
@@ -36,7 +36,8 @@
         <h1>Svi različiti gradovi u kojima rade korisnici.</h1>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> -->
+    <script src="domaci.js"></script>
 </body>
 
 </html>
