--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -42,6 +42,32 @@
       </div>
     </div>
 
+    <!-- FIREBASE CHATROOM -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
+    <script>
+      // Import the functions you need from the SDKs you need
+      //   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.4/firebase-app.js";
+      //   import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.4/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyAY5NOBDHAohGfAOnz5CoYdOBrjnXLbwMA",
+        authDomain: "itbootcamp-chat-8c2e4.firebaseapp.com",
+        projectId: "itbootcamp-chat-8c2e4",
+        storageBucket: "itbootcamp-chat-8c2e4.appspot.com",
+        messagingSenderId: "291814361261",
+        appId: "1:291814361261:web:69716b3820a19745fc5e24",
+        measurementId: "G-1KHLXPM57V",
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      let db = firebase.firestore();
+    </script>
+    <!-- SCRIPT -->
     <script src="script.js"></script>
   </body>
 </html>
