--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -8,18 +8,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- CHAT  -->
     <div id="chat">
+      <!-- CHAT HEADER -->
       <div id="headerSection">
         <h2>IT Bootcamp Chat</h2>
         <p>Choose a chatroom</p>
       </div>
+      <!-- CHAT NAVIGATION -->
       <div id="chatRooms">
         <button class="btn">#general</button>
         <button class="btn">#js</button>
         <button class="btn">#homeworks</button>
         <button class="btn">#tests</button>
       </div>
+      <!-- MESSAGE SECTION -->
       <div id="messageSection"></div>
+      <!-- INPUT SECTION -->
       <div id="inputSection">
         <form id="messageForm">
           <input
@@ -68,6 +73,6 @@
       let db = firebase.firestore();
     </script>
     <!-- SCRIPT -->
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
