modified chat.js method getChats

--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHAT PROJECT</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,12 +22,19 @@
         <p>Choose a chatroom</p>
       </div>
       <!-- CHAT NAVIGATION -->
-      <div id="chatRooms">
+      <div id="hamburgerMenu" class="dropdown">
+        <i class="fas fa-bars fa-2x"></i>
         <button class="btn">#general</button>
         <button class="btn">#js</button>
         <button class="btn">#homeworks</button>
         <button class="btn">#tests</button>
       </div>
+      <nav id="chatRooms">
+        <button class="btn">#general</button>
+        <button class="btn">#js</button>
+        <button class="btn">#homeworks</button>
+        <button class="btn">#tests</button>
+      </nav>
       <!-- MESSAGE SECTION -->
       <div id="messageSection"></div>
       <!-- INPUT SECTION -->
