message section css modified

--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -49,7 +49,7 @@
               id="message"
               placeholder="Send  message...."
             />
-            <input class="btn" type="submit" value="Send" />
+            <input id="messageBtn" class="btn" type="submit" value="Send" />
           </form>
           <form id="usernameForm">
             <input
@@ -58,7 +58,7 @@
               id="username"
               placeholder="Update username...."
             />
-            <input class="btn" type="submit" value="Update" />
+            <input id="usernameBtn" class="btn" type="submit" value="Update" />
           </form>
         </div>
       </div>
