color picker added

--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -42,6 +42,22 @@
         </div>
         <!-- INPUT SECTION -->
         <div id="inputSection">
+          <form action="" id="colorForm">
+            <input
+              type="color"
+              name="colorPick"
+              id="colorPick"
+              value="#ffffff"
+            />
+            <div>
+              <input
+                id="colorBtn"
+                class="inputBtn"
+                type="submit"
+                value="Update color"
+              />
+            </div>
+          </form>
           <form id="messageForm">
             <textarea
               id="message"
