--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -25,13 +25,13 @@
         <!-- CHAT NAVIGATION -->
         <div id="hamburgerMenu" class="dropdown">
           <i class="fas fa-bars fa-2x"></i>
-          <button class="btn">#general</button>
+          <button class="btn" autofocus="true">#general</button>
           <button class="btn">#js</button>
           <button class="btn">#homeworks</button>
           <button class="btn">#tests</button>
         </div>
         <nav id="chatRooms">
-          <button class="btn">#general</button>
+          <button class="btn" autofocus="true">#general</button>
           <button class="btn">#js</button>
           <button class="btn">#homeworks</button>
           <button class="btn">#tests</button>
@@ -81,12 +81,14 @@
               id="username"
               placeholder="Update username...."
             />
-            <input
-              id="usernameBtn"
-              class="inputBtn"
-              type="submit"
-              value="Update"
-            />
+            <div>
+              <input
+                id="usernameBtn"
+                class="inputBtn"
+                type="submit"
+                value="Update"
+              />
+            </div>
           </form>
         </div>
       </div>
