Date showing in messages  updated

--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -42,6 +42,11 @@
         </div>
         <!-- INPUT SECTION -->
         <div id="inputSection">
+          <form action="" id="filter">
+            <input type="date" name="fromDate" id="fromDate" />
+            <input type="date" name="toDate" id="toDate" />
+            <input type="submit" value="Search" />
+          </form>
           <form action="" id="colorForm">
             <input
               type="color"
@@ -81,14 +86,12 @@
               id="username"
               placeholder="Update username...."
             />
-            <div>
-              <input
-                id="usernameBtn"
-                class="inputBtn"
-                type="submit"
-                value="Update"
-              />
-            </div>
+            <input
+              id="usernameBtn"
+              class="inputBtn"
+              type="submit"
+              value="Update"
+            />
           </form>
         </div>
       </div>
