--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -43,9 +43,9 @@
         <!-- INPUT SECTION -->
         <div id="inputSection">
           <form action="" id="filter">
-            <input type="date" name="fromDate" id="fromDate" />
-            <input type="date" name="toDate" id="toDate" />
-            <input type="submit" value="Search" />
+            <input type="datetime-local" name="fromDate" id="fromDate" />
+            <input type="datetime-local" name="toDate" id="toDate" />
+            <input type="submit" value="Filter messages" class="inputBtn" />
           </form>
           <form action="" id="colorForm">
             <input
@@ -54,14 +54,12 @@
               id="colorPick"
               value="#ffffff"
             />
-            <div>
-              <input
-                id="colorBtn"
-                class="inputBtn"
-                type="submit"
-                value="Update color"
-              />
-            </div>
+            <input
+              id="colorBtn"
+              class="inputBtn"
+              type="submit"
+              value="Update color"
+            />
           </form>
           <form id="messageForm">
             <textarea
@@ -70,14 +68,12 @@
               rows="1"
               cols="0"
             ></textarea>
-            <div>
-              <input
-                id="messageBtn"
-                class="inputBtn"
-                type="submit"
-                value="Send"
-              />
-            </div>
+            <input
+              id="messageBtn"
+              class="inputBtn"
+              type="submit"
+              value="Send"
+            />
           </form>
           <form id="usernameForm">
             <input
@@ -86,6 +82,7 @@
               id="username"
               placeholder="Update username...."
             />
+
             <input
               id="usernameBtn"
               class="inputBtn"
