Room style when in room added

--- a/28_CHAT_PROJECT/index.html
+++ b/28_CHAT_PROJECT/index.html
@@ -25,13 +25,13 @@
         <!-- CHAT NAVIGATION -->
         <div id="hamburgerMenu" class="dropdown">
           <i class="fas fa-bars fa-2x"></i>
-          <button class="btn" autofocus="true">#general</button>
+          <button class="btn">#general</button>
           <button class="btn">#js</button>
           <button class="btn">#homeworks</button>
           <button class="btn">#tests</button>
         </div>
         <nav id="chatRooms">
-          <button class="btn" autofocus="true">#general</button>
+          <button class="btn">#general</button>
           <button class="btn">#js</button>
           <button class="btn">#homeworks</button>
           <button class="btn">#tests</button>
